[package]
name = "security-iot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
target = "armv7-unknown-linux-gnueabihf"

[dependencies]
anyhow = "1.0.71"
embedded-hal = "0.2.7"
linux-embedded-hal = "0.3.2"
mfrc522 = { version = "0.6.0", features = ["std"] }
